# machineVision_SG-

./: wd
QTClient/qClientVision/: .gitignore  gesture_receiver.cpp  gesture_receiver.h  gst_video_receiver.cpp  gst_video_receiver.h  jovideoplayer.cpp  jovideoplayer.h  main.cpp  qClientVision.pro  qClientVision.sln  tcp_commander.cpp  tcp_commander.h  vcpkg.json  video_canvas.cpp  video_canvas.h
mainProject/: CMakeLists.txt
oledTest/: cpu_wave.cpp  oled_heart.cpp  oled_test.cpp
protoBuf_/: gesture.proto
protoBuf_/protoBuf_PCQT/: gesture.pb.h
sg90Test/: servo_app.c  servo_debug.c  servo_swing.c
test_server/: CMakeLists.txt  main.cpp  streamer.py
